# CMDMatrix

./: .gitignore  CMakeLists.txt  README.md  setup.sh
.ccls-cache/@@home@schlexander@Code@CMDMatrix/: @usr@include@alloca.h.blob  @usr@include@bits@atomic_wide_counter.h.blob  @usr@include@bits@byteswap.h.blob  @usr@include@bits@confname.h.blob  @usr@include@bits@endian.h.blob  @usr@include@bits@endianness.h.blob  @usr@include@bits@environments.h.blob  @usr@include@bits@floatn-common.h.blob  @usr@include@bits@floatn.h.blob  @usr@include@bits@getopt_core.h.blob  @usr@include@bits@getopt_posix.h.blob  @usr@include@bits@libc-header-start.h.blob  @usr@include@bits@long-double.h.blob  @usr@include@bits@posix_opt.h.blob  @usr@include@bits@pthreadtypes-arch.h.blob  @usr@include@bits@pthreadtypes.h.blob  @usr@include@bits@select.h.blob  @usr@include@bits@stdint-intn.h.blob  @usr@include@bits@stdint-uintn.h.blob  @usr@include@bits@stdio_lim.h.blob  @usr@include@bits@stdlib-float.h.blob  @usr@include@bits@struct_mutex.h.blob  @usr@include@bits@struct_rwlock.h.blob  @usr@include@bits@thread-shared-types.h.blob  @usr@include@bits@time.h.blob  @usr@include@bits@time64.h.blob  @usr@include@bits@timesize.h.blob  @usr@include@bits@timex.h.blob  @usr@include@bits@types.h.blob  @usr@include@bits@types@FILE.h.blob  @usr@include@bits@types@__FILE.h.blob  @usr@include@bits@types@__fpos64_t.h.blob  @usr@include@bits@types@__fpos_t.h.blob  @usr@include@bits@types@__locale_t.h.blob  @usr@include@bits@types@__mbstate_t.h.blob  (+55 more)
include/: matrix.h
src/: matrix.c
(+4 files in other folders)
